--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,7 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
-                <a href="/7-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-7-0</a>
+                <a href="/7-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-7-0</a> (in progress)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">updates page</span> - divided updates over two dates, sub section labels are links</li>
                 </ul>
