--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,6 +19,7 @@
                 <a href="/7-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-7-0</a> (in progress)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">updates page</span> - divided updates over two dates, sub section labels are links</li>
+                    <li><span class="govuk-!-font-weight-bold">updates (within sections)</span> - always visible option, latest updates listed under each sub-section heading</li>
                 </ul>
             </li>
             <li>
@@ -39,7 +40,7 @@
             <li>
                 <a href="/4-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-4-0</a>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li><span class="govuk-!-font-weight-bold">updates</span> - checkbox filter added</li>
+                    <li><span class="govuk-!-font-weight-bold">updates (within sections)</span> - checkbox filter added</li>
                     <li><span class="govuk-!-font-weight-bold">notifications</span> - link/label to sign up added</li>
                     <li><span class="govuk-!-font-weight-bold">other formats</span> - link/label design updated</li>
                 </ul>
