--- a/app/views/includes/english-maths-flow-2-fixed.html
+++ b/app/views/includes/english-maths-flow-2-fixed.html
@@ -15,7 +15,7 @@
             </text>
             <text class="secondary-colour">
                 <tspan x="294" y="99">This is the same as</tspan>
-                <tspan x="287" y="124">at least grade E or 2** </tspan>
+                <tspan x="289" y="124">at least grade E or 2 </tspan>
                 <tspan x="340" y="149">at GCSE.</tspan>
             </text>
             <!-- Yes 1 -->
