--- a/app/views/7-0/manual-updates.html
+++ b/app/views/7-0/manual-updates.html
@@ -14,7 +14,7 @@ GOV.UK Manual
     {% if myData.header == "altered" %}
         {% include "../includes/manual-header-2.html" %}
     {% else %}
-        {% set _manualHeaderTitle = _thisManual.title|safe + " - " + _thisManual.date|safe + " (" + _thisManual.version|safe|lower + ")"  %}
+        {% set _manualHeaderTitle = _thisManual.title|safe + " - " + _thisManual.date|safe  %}
         {% include "../includes/manual-header.html" %}
     {% endif %}
 
@@ -44,8 +44,8 @@ GOV.UK Manual
                             <h2>
                                 10 December 2018
                             </h2>
-                            <p class="govuk-!-font-size-24">August 2018 to July 2019 (version 2)</p>
-                            <br>
+                            <!-- <p class="govuk-!-font-size-24">August 2018 to July 2019</p> -->
+                            <!-- <br> -->
                             <dl class="updates-list">
                                 {% for section in _thisManual.sections %}
                                     {% if loop.index % 2 == 0 %}
@@ -89,8 +89,8 @@ GOV.UK Manual
                             <h2>
                                 31 July 2018
                             </h2>
-                            <p class="govuk-!-font-size-24">August 2018 to July 2019 (version 1)</p>
-                            <br>
+                            <!-- <p class="govuk-!-font-size-24">August 2018 to July 2019 (version 1)</p>
+                            <br> -->
                             <dl class="updates-list">
                                 {% for section in _thisManual.sections %}
                                     {% if loop.index % 2 != 0 %}
