--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,7 +26,7 @@
                 <a href="/6-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-6-0</a>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">collection/document list page</span> - grouped documents by target user with headings changed e.g. “Training providers", page title, page intro paragraph (moved details from base of page into it), document file names, HTML document thumbnail icon, adding “PDF: ” before the PDF document names</li>
-                    <li><span class="govuk-!-font-weight-bold">flow charts</span> - textual and graphical flows updated with new content, flow charts appear after intro paragraph, scaling bug fixed on ie11</li>
+                    <li><span class="govuk-!-font-weight-bold">flow charts</span> - textual and graphical flows updated with new content and style, flow charts appear after intro paragraph, scaling bug fixed on ie11, made accessible <span class="govuk-!-font-weight-bold">pre</span> empathy lab testing</li>
                 </ul>
             </li>
             <li>
