links to flow charts

--- a/app/views/7-0/manual-setup.html
+++ b/app/views/7-0/manual-setup.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Manual</h1>
+        <h1 class="govuk-heading-l">Manual setup</h1>
     </div>
 </div>
 <div class="govuk-grid-row">
@@ -95,6 +95,11 @@
                 <li><a href="subscribe-email?emailUpdates=2" class="govuk-link govuk-link--no-visited-state">Email with 2 updates (weekly update)</a></li>
                 <li><a href="subscribe-email?emailUpdates=3" class="govuk-link govuk-link--no-visited-state">Email with different updates to more than 1 manual</a></li>
                 <li><a href="subscribe-email?emailUpdates=4" class="govuk-link govuk-link--no-visited-state">Email with same update to more than 1 manual</a></li>
+            </ul>
+            <h1 class="govuk-heading-l">Flow charts</h1>
+            <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
+                <li><a href="wrapper?include=english-maths-flow-2-fixed" class="govuk-link govuk-link--no-visited-state">SVG flow chart - English and Maths</a></li>
+                <li><a href="wrapper?include=english-maths-text-flow-2" class="govuk-link govuk-link--no-visited-state">Text decision tree - English and Maths</a></li>
             </ul>
         </form>
     </div>
